# from-scratch-series

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/llama2_pytorch/: .gitignore  download.sh  inference.py  model.py
src/transformer_pytorch/: .gitignore  Beam_Search.ipynb  Inference.ipynb  Local_Train.ipynb  README.md  attention_visual.ipynb  config.py  dataset.py  model.py  train.py  train_wb.py  translate.py
src/transformer_pytorch/requirements/: requirements.txt
src/transformer_pytorch/tokenizers/: tokenizer_en.json  tokenizer_it.json
