[project]
name = "from-scratch-series"
version = "0.1.0"
description = ""
authors = [
    {name = "russhustle", email = "you@example.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # PyTorch with CUDA 12.1 support
    "torch",
    "torchvision",
    "torchaudio",
    "torchtext",

    # Data handling and utilities
    "datasets",
    "tokenizers",

    # Metrics and monitoring
    "torchmetrics",
    "tensorboard",

    # Visualization and experiment tracking
    "altair",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "notebook",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]
torchaudio = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
]
